src/components/home/components/pages/pages/projects/projects.css
#projects-maindiv {
  width: 100%;
  height: calc(100% - 2.2rem - 13px - 30px);

  background-color: transparent;

  overflow-y: visible;
  overflow-x:visible;

  align-content: flex-start;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: flex-start;
}

#projects-maindiv::-webkit-scrollbar {
  display: none;
}

#AppButton-body {
  width: calc(50% - 10px);
  aspect-ratio: 1/1;

  background-color: rgb(15, 19, 26, 0.4);

  box-shadow: 0px 0px 30px 0px rgb(23, 28, 35, 0.4);

  border-radius: 20px;

  cursor: pointer;

  transition: 0.35s;
}
#AppButton-body:hover {
  scale: 1.05;
}

#AppButton-AppInfo {
  width: max-content;
  min-width: 70px;
  max-width: 50%;
  height: max-content;

  background-color: transparent;
  text-align: center;

  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#AppButton-image {
  width: 100%;
  aspect-ratio: 1/1;

  background-position: center;
  background-size: cover;

  background-color: transparent;

  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

#AppButton-name {
  font-family: _bold;
  font-size: 1.1rem;
  color: #F5F5F5;
  margin-top: 5px;

  position: relative;
  left: 50%;
  transform: translate(-50%);

  width: max-content
}

@media screen and (min-width: 1020px) {
  #projects-maindiv {
    width: 100%;
    height: calc(100% - 2.5rem - 50px);

    background-color: transparent;

    overflow-y: visible;
    overflow-x: visible;

    align-content: flex-start;
    display: flex;
    flex-wrap: wrap;
    gap: 25px;
    justify-content: start;
  }

  #AppButton-body {
    width: calc((100% - 75px) / 4);
    aspect-ratio: 1/1;

    background-color: rgb(15, 19, 26, 0.4);

    box-shadow: 0px 0px 30px 0px rgb(23, 28, 35, 0.4);

    border-radius: 30px;
  }
  #AppButton-AppInfo {
    width: 50%;
    height: max-content;

    background-color: transparent;
    text-align: center;

    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  #AppButton-image {
    width: 100%;
    aspect-ratio: 1/1;

    background-position: center;
    background-size: cover;

    background-color: transparent;

    position: relative;
    left: 50%;
    transform: translateX(-50%);
  }

  #AppButton-name {
    font-family: _bold;
    font-size: 1.7rem;
    color: #F5F5F5;
    margin-top: 10px;

    position: relative;
    left: 50%;
    transform: translate(-50%);

    width: max-content
  }
}

